cmd/hellok8s/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hellok8s
  labels:
    app: hellok8s
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hellok8s
    spec:
      containers:
      - name: hellok8s
        image: tschokko/hellok8s:${TAG}
        command:
        ports:
          - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: hellok8s
spec:
  type: LoadBalancer
  selector:
    app: hellok8s
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
